<resources>
    <string name="app_name">Kara ve dönü yapıları ünite-4</string>
    <string name="uyg1">1.uygulama</string>
    <string name="uyg2">2.uygulama</string>
    <string name="uyg3">3.ugulama</string>
    <string name="uyg4">4.ugulama</string>
    <string name="uyg5">5.ugulama</string>
    <string name="uyg6">6.ugulama</string>
    <string name="uyg7">7.ugulama</string>
    <string name="uyg8">8.ugulama</string>
    <string name="uyg9">9.ugulama</string>
    <string name="uyg10">10.ugulama</string>
    <string name="uyg11">11.ugulama</string>
</resources>