<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="-360"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="-363dp">

        <Button
            android:id="@+id/btnUyg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="btnUyg1Goster"
            android:text="@string/uyg1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:onClick="btnUyg2Goster"
            android:text="@string/uyg2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:onClick="btnUyg3Goster"
            android:text="@string/uyg3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:onClick="btnUyg4Goster"
            android:text="@string/uyg4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg5"
            android:layout_width="124dp"
            android:layout_height="50dp"
            android:layout_marginTop="284dp"
            android:layout_marginBottom="32dp"
            android:onClick="btnUyg5Goster"
            android:text="@string/uyg5"
            app:layout_constraintBottom_toTopOf="@+id/btnUyg6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="356dp"
            android:onClick="btnUyg6Goster"
            android:text="@string/uyg6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="424dp"
            android:onClick="btnUyg7Goster"
            android:text="@string/uyg7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="492dp"
            android:onClick="btnUyg8Goster"
            android:text="@string/uyg8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="556dp"
            android:onClick="btnUyg9Goster"
            android:text="@string/uyg9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="624dp"
            android:onClick="btnUyg10Goster"
            android:text="@string/uyg10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUyg11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="680dp"
            android:onClick="btnUyg11Goster"
            android:text="@string/uyg11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>